--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,13 @@
 body {
     background-color: #d0e5da;
 }
-
+#bannerimage{
+    position: absolute;
+    padding: 0 1px;
+    margin: 0;
+    width: 99%;
+    z-index: 0  ;
+}
 nav{
     width: 100%;
     height: 100px;
