--- a/styles/plattegrond.css
+++ b/styles/plattegrond.css
@@ -33,3 +33,10 @@ nav ul li a{
 #logo{
     height: 100px;
 }
+#plattengrond{
+    width: 60%;
+    border: 5px solid #555;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
