--- a/styles/plattegrond.css
+++ b/styles/plattegrond.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: 'Baskerville';
+    src: url('../media/Font/Baskerville.ttc');
+} 
 body {
     background-color: #d0e5da;
 }
@@ -41,12 +45,15 @@ nav ul li a{
     margin-right: auto;
 }
 h1 {
+    font-family: 'Baskerville';
     text-align:center
 }
 h2 {
+    font-family: 'Baskerville';
     text-align:center
 }
 .dieren {
+    font-family: 'Baskerville';
     border: 5px outset #555;
     text-align: left;
 }
