--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: 'Baskerville';
+    src: url('../media/Font/Baskerville.ttc');
+} 
 body {
     background-color: #d0e5da;
 }
@@ -32,4 +36,7 @@ nav ul li a{
 }
 #logo{
     height: 100px;
+}
+.alles{
+    font-family: 'Baskerville';
 }
