--- a/styles/index.css
+++ b/styles/index.css
@@ -8,9 +8,8 @@ body {
     background-color: #d0e5da;
 }
 #bannerimage{
-    position: fixed;
+    position: absolute;
     top: 0%;
-    padding: 0 1px;
     margin: 0;
     width: 100%;
     z-index: 0  ;
@@ -49,7 +48,19 @@ nav ul li a{
 }
 h1 {
     font-family: 'Baskerville';
-    text-align: center;
-    position: relative;
+    text-shadow: 0 0 10px black;
+    color: #139d8e;
+    margin-left: 33%;
+    margin-top: 10%;
+    position: absolute;
+    font-size: 150px;
     
+}
+#home1{
+    background-color: #f89d0e;
+    float: left;
+}
+#home2 {
+    background-color: #f89d0e;
+    float: left;
 }
