--- a/styles/index.css
+++ b/styles/index.css
@@ -8,11 +8,11 @@ body {
     background-color: #d0e5da;
 }
 #bannerimage{
-    position: absolute;
-    top: 0%;
+    position: relative;
+    top: -110px;
     margin: 0;
     width: 100%;
-    z-index: 0  ;
+    z-index: 5  ;
 }
 nav{
     width: 100%;
@@ -22,6 +22,7 @@ nav{
     border-bottom: 1px solid rgba(255, 255, 255, .2);
     position: sticky;
     top: 0;
+    z-index: 10;
 }
 nav ul{
     display: flex;
@@ -47,20 +48,28 @@ nav ul li a{
     height: 100px;
 }
 h1 {
+    -webkit-text-stroke: solid;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #d0e5da;
     font-family: 'Baskerville';
-    text-shadow: 0 0 10px black;
     color: #139d8e;
-    margin-left: 33%;
-    margin-top: 10%;
-    position: absolute;
     font-size: 150px;
+    position:absolute;
+    margin: auto;
+    margin-left: 33%;
+    margin-top: -600px;
+    z-index: 6;
     
 }
 #home1{
     background-color: #f89d0e;
     float: left;
+    position:relative;
+    top: -110px;
 }
 #home2 {
     background-color: #f89d0e;
     float: left;
+    position: relative;
+    top: -110px;
 }
