--- a/styles/actueel.css
+++ b/styles/actueel.css
@@ -36,31 +36,45 @@ nav ul li a{
 }
 
 h1 {
-    color: #000C2C;
-    font-size: 50;
+    color: rgba(0, 12, 44);
+    font-size: 100;
     -webkit-text-stroke: solid;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #d0e5da;
+    -webkit-text-stroke-width: 0.3px;
+    -webkit-text-stroke-color: rgb(208, 229, 218);
 }
 #artikel1 {
-    background-color: #f89d0e;
+    background-color: rgba(248, 157, 14, 0.7);
+    position: relative;
     width: 47.5%;
     height: 80%;
     float: left;
     margin: 10px;
-    margin-top: 50px;
+}
+#img1 {
+    margin: 10px;
+    float: left;
+}
+#artikel_titel1 {
+    position: relative;
+    top: 10px
 }
 #artikel2 {
-    background-color: #f89d0e;
+    background-color: rgba(248, 157, 14, 0.7);
     width: 47.5%;
     height: 80%;
     float: right;
     margin: 10px;
-    margin-top: 50px;
+}
+#img2 {
+    margin: 10px;
+    float: left;
+}
+#artikel_titel2 {
+    position: relative;
+    top: 10px
 }
 #actueel_banner {
-    width: 80%;
-    height: 400px;
+    width: 100%;
     margin-left:auto;
     margin-right:auto;
 }
