--- a/styles/index.css
+++ b/styles/index.css
@@ -61,15 +61,46 @@ h1 {
     z-index: 6;
     
 }
-#home1{
-    background-color: #f89d0e;
-    float: left;
-    position:relative;
-    top: -110px;
-}
-#home2 {
-    background-color: #f89d0e;
-    float: left;
+#artikel1 {
+    background-color: rgba(248, 157, 14, 0.7);
     position: relative;
-    top: -110px;
+    width: 47.5%;
+    height: 80%;
+    float: left;
+    margin: 10px;
+}
+#img1 {
+    margin: 10px;
+    float: left;
+}
+#artikel_titel1 {
+    position: relative;
+    top: 10px
+}
+#artikel2 {
+    background-color: rgba(248, 157, 14, 0.7);
+    width: 47.5%;
+    height: 80%;
+    float: right;
+    margin: 10px;
+}
+#img2 {
+    margin: 10px;
+    float: left;
+}
+#artikel_titel2 {
+    position: relative;
+    top: 10px
+}
+#actueel_banner {
+    width: 100%;
+    margin-left:auto;
+    margin-right:auto;
+}
+#actueel_titel {
+    text-align: center;
+    vertical-align: middle;
+    line-height: 90px; 
+    bottom: 200px;
+    position: relative;
 }
