--- a/styles/reviews.css
+++ b/styles/reviews.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: 'Baskerville';
+    src: url('../media/Font/Baskerville.ttc');
+} 
 body {
     margin: 0;
     background-color: #d0e5da;
@@ -34,4 +38,13 @@ nav ul li a{
 }
 #logo{
     height: 100px;
+}
+.alles{
+    font-family: 'Baskerville';
+    padding: 0 20px;
+}
+h1{
+    padding: 0 20px;
+    font-family: 'Baskerville';
+
 }
