--- a/styles/tickets.css
+++ b/styles/tickets.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: 'Baskerville';
+    src: url('../media/Font/Baskerville.ttc');
+} 
 body {
     margin: 0;
     background-color: #d0e5da;
