--- a/styles/plattegrond.css
+++ b/styles/plattegrond.css
@@ -57,6 +57,20 @@ h2 {
 }
 .dieren {
     font-family: 'Baskerville';
-    border: 5px outset #555;
-    text-align: left;
+}
+#deel1{
+    position: relative;
+    width: 47.5%;
+    height: 50%;
+    float: left;
+    margin: 10px;
+    text-align:center
+}
+#deel2{
+    position: relative;
+    width: 47.5%;
+    height: 50%;
+    float: right;
+    margin: 10px;
+    text-align:center
 }
