--- a/styles/pandas.css
+++ b/styles/pandas.css
@@ -16,6 +16,7 @@ nav{
     border-bottom: 1px solid rgba(255, 255, 255, .2);
     position: sticky;
     top: 0;
+    z-index: 10;
 }
 nav ul{
     display: flex;
@@ -41,4 +42,11 @@ nav ul li a{
 }
 #tekst {
     padding: 20px;
+}
+#bannerimage{
+    position: relative;
+    top: -110px;
+    margin: 0;
+    width: fit-content;
+    z-index: 5  ;
 }
