--- a/styles/plattegrond.css
+++ b/styles/plattegrond.css
@@ -17,6 +17,7 @@ nav{
     border-bottom: 1px solid rgba(255, 255, 255, .2);
     position: sticky;
     top: 0;
+    z-index: 10;
 }
 nav ul{
     display: flex;
@@ -73,4 +74,11 @@ h2 {
     float: right;
     margin: 10px;
     text-align:center
+}
+#bannerimage{
+    position: relative;
+    top: -110px;
+    margin: 0;
+    width: 100%;
+    z-index: 5  ;
 }
