--- a/styles/dierentuin.css
+++ b/styles/dierentuin.css
@@ -40,15 +40,17 @@ nav ul li a{
 #logo{
     height: 100px;
 }
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-=======
->>>>>>> 82e76bcd7c9df75dccd695c99a950ccc1e2dee01
+
 #giraffe{
-    float: right;
+    float: left;
     padding: 10px;
-    position: relative;
+    position: fixed;
 }
 
->>>>>>> 82e76bcd7c9df75dccd695c99a950ccc1e2dee01
+#pinguin{
+    padding: 10px;
+    position: relative;
+    padding-right: 500;
+    height: 100;
+    width: 50
+}
