--- a/styles/reviews.css
+++ b/styles/reviews.css
@@ -96,3 +96,41 @@ h1{
     width: 100%;
     z-index: 5  ;
 }
+#foto1{
+height: 100px;
+}
+#foto2{
+height: 100px;
+}
+#foto3{
+height: 100px;
+}
+#foto4{
+height: 100px;
+}
+#foto5{
+height: 100px;
+}
+#foto6{
+height: 100px;
+}
+
+#ster1{
+height: 70px;
+}
+#ster2{
+height: 25px;
+}
+#ster3{
+height: 70px;
+}
+#ster4{
+height: 70px;
+}
+#ster5{
+height: 25px;
+}
+#ster6{
+height: 70px;
+}
+
