--- a/styles/dierentuin.css
+++ b/styles/dierentuin.css
@@ -51,6 +51,6 @@ nav ul li a{
     padding: 10px;
     position: relative;
     padding-right: 500;
-    height: 100;
-    width: 50
+    width: 800px;
+    height: 700px;
 }
