--- a/styles/cafeteria.css
+++ b/styles/cafeteria.css
@@ -17,6 +17,7 @@ nav{
     border-bottom: 1px solid rgba(255, 255, 255, .2);
     position: sticky;
     top: 0;
+    z-index: 10 ;
 }
 nav ul{
     display: flex;
@@ -39,4 +40,24 @@ nav ul li a{
 }
 #logo{
     height: 100px;
+}
+#bannerimage{
+    position: relative;
+    top: -110px;
+    margin: 0;
+    width: 100%;
+    z-index: 5  ;
+}
+h1 {
+    color: #139d8e;
+    font-size: 150px;
+    position:absolute;
+    margin: auto;
+    margin-left: 33%;
+    margin-top: -600px;
+    z-index: 6;
+    
+}
+#img1 {
+    height: 200px;
 }
