--- a/styles/tickets.css
+++ b/styles/tickets.css
@@ -7,8 +7,6 @@ body {
     background-color: #d0e5da;
     font-family: 'Baskerville';
 }
-
-
 nav{
     width: 100%;
     height: 100px;
@@ -39,4 +37,32 @@ nav ul li a{
 }
 #logo{
     height: 100px;
+}
+h1 {
+    color: rgba(19, 157, 142, 1);
+    font-size: 100;
+    align: center;
+}
+tr, td, table {
+    border:rgba(19, 157, 142, .8) 1px solid;
+}
+table {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+tr, td {
+    width: 100px;
+}
+#tickets_banner {
+    width: 100%;
+    margin-left:auto;
+    margin-right:auto;
+}
+#tickets_titel {
+    text-align: center;
+    vertical-align: middle;
+    line-height: 90px; 
+    bottom: 200px;
+    position: relative;
 }
