--- a/styles/cafeteria.css
+++ b/styles/cafeteria.css
@@ -61,3 +61,16 @@ h1 {
 #img1 {
     height: 200px;
 }
+.vegewonder {
+    margin: 10px;
+    display:grid;
+    grid-template-columns: 20% 80%;
+}
+.yorik {
+    margin: 10px;
+    display:grid;
+    grid-template-columns: 80% 20%;
+}
+#tijdelijk {
+    height: max-content ;
+}
