--- a/styles/tickets.css
+++ b/styles/tickets.css
@@ -7,6 +7,15 @@ body {
     background-color: #d0e5da;
     font-family: 'Baskerville';
 }
+.tickets:active {
+    color:rgba(19, 157, 142, 1);
+}
+.tickets:link {
+    color: black;
+}
+.tickets:visited {
+    color: rgba(15, 118, 106, 1);
+}
 nav{
     width: 100%;
     height: 100px;
@@ -42,22 +51,29 @@ h1 {
     color: rgba(19, 157, 142, 1);
     font-size: 100;
     align: center;
+    text-shadow: 5px 5px 10px black;
 }
 tr, td, table {
-    border:rgba(19, 157, 142, .8) 1px solid;
+    border:rgba(19, 157, 142, .8) 2px solid;
 }
 table {
     width: 80%;
+    background-color: blanchedalmond;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 5px 5px 10px black;
 }
 tr, td {
     width: 100px;
+    height: 75px;
+    text-align: center;
+    font-size: 20px;
 }
 #tickets_banner {
     width: 100%;
     margin-left:auto;
     margin-right:auto;
+
 }
 #tickets_titel {
     text-align: center;
@@ -65,4 +81,9 @@ tr, td {
     line-height: 90px; 
     bottom: 200px;
     position: relative;
+}
+#tic_banner {
+    width: 100%;
+    height: 500px;
+    box-shadow: 5px 5px 10px black;
 }
