--- a/styles/solliciteren.css
+++ b/styles/solliciteren.css
@@ -17,6 +17,7 @@ nav{
     border-bottom: 1px solid rgba(255, 255, 255, .2);
     position: sticky;
     top: 0;
+    z-index: 10;
 }
 nav ul{
     display: flex;
@@ -41,9 +42,10 @@ nav ul li a{
     height: 100px;
 }
 #form{
-    position: fixed;
+    position: relative;
     float: left;
     text-align: center;
+    width: 100%;
 }
 
 #footer{
@@ -55,4 +57,14 @@ nav ul li a{
     position:relative;
     bottom:-700px;
     height:90px;
+}
+h1{
+text-align: center;
+}
+#bannerimage{
+    position: relative;
+    top: -110px;
+    margin: 0;
+    width: 100%;
+    z-index: 5  ;
 }
