--- a/styles/index.css
+++ b/styles/index.css
@@ -57,7 +57,7 @@ h1 {
     margin-left: 33%;
     margin-top: -600px;
     z-index: 6;
-    
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 
