--- a/styles/pandas.css
+++ b/styles/pandas.css
@@ -50,3 +50,6 @@ nav ul li a{
     width: 100%;
     z-index: 5  ;
 }
+h1 {
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
