--- a/styles/plattegrond.css
+++ b/styles/plattegrond.css
@@ -47,7 +47,8 @@ nav ul li a{
 }
 h1 {
     font-family: 'Baskerville';
-    text-align:center
+    text-align:center;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 h2 {
     font-family: 'Baskerville';
