--- a/styles/reviews.css
+++ b/styles/reviews.css
@@ -48,6 +48,7 @@ h1{
     padding: 0 20px;
     font-family: 'Baskerville';
     text-align: center;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 #persoon1{
     position: relative;
