--- a/styles/shop.css
+++ b/styles/shop.css
@@ -37,7 +37,5 @@ nav ul li a{
 h1 {
     color: rgba(0, 12, 44);
     font-size: 100;
-    -webkit-text-stroke: solid;
-    -webkit-text-stroke-width: 0.3px;
-    -webkit-text-stroke-color: rgb(208, 229, 218);
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
