--- a/styles/solliciteren.css
+++ b/styles/solliciteren.css
@@ -59,7 +59,8 @@ nav ul li a{
     height:90px;
 }
 h1{
-text-align: center;
+    text-align: center;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 #bannerimage{
     position: relative;
