--- a/styles/tickets.css
+++ b/styles/tickets.css
@@ -51,7 +51,7 @@ h1 {
     color: rgba(19, 157, 142, 1);
     font-size: 100;
     align: center;
-    text-shadow: 5px 5px 10px black;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 tr, td, table {
     border:rgba(19, 157, 142, .8) 2px solid;
