--- a/styles/shop.css
+++ b/styles/shop.css
@@ -1,9 +1,25 @@
+@font-face {
+    font-family: 'Baskerville';
+    src: url('../media/Font/Baskerville.ttc');
+} 
 body {
     margin: 0;
     background-color: #d0e5da;
     font-family: 'Baskerville';
 }
 
+body {
+    margin: 0;
+    background-color: #d0e5da;
+    font-family: 'Baskerville';
+}
+#bannerimage{
+    position: relative;
+    top: -110px;
+    margin: 0;
+    width: 100%;
+    z-index: 5  ;
+}
 nav{
     width: 100%;
     height: 100px;
@@ -12,6 +28,7 @@ nav{
     border-bottom: 1px solid rgba(255, 255, 255, .2);
     position: sticky;
     top: 0;
+    z-index: 10;
 }
 nav ul{
     display: flex;
@@ -23,11 +40,13 @@ nav ul li{
     list-style: none;
 }
 nav ul li a{
+    font-family: 'Baskerville';
     display: block;
     color: black;
     padding: 0 20px;
     text-decoration: none;
     text-transform: uppercase;  
+    font-weight: bold;
     line-height: 100px;
 
 }
