--- a/styles/actueel.css
+++ b/styles/actueel.css
@@ -15,6 +15,7 @@ nav{
     border-bottom: 1px solid rgba(255, 255, 255, .2);
     position: sticky;
     top: 0;
+    z-index: 5;
 }
 nav ul{
     display: flex;
@@ -41,9 +42,11 @@ nav ul li a{
 h1 {
     color: rgba(19, 157, 142, 1);
     font-size: 100;
-    align: center;
+    align-self: center;
+    margin-top: -100px;
     text-shadow: 5px 5px 10px black;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    z-index: 2;
 }
 #artikel1 {
     background-color: rgba(248, 157, 14, 0.7);
@@ -60,7 +63,11 @@ h1 {
 }
 #artikel_titel1 {
     position: relative;
-    top: 10px
+    top: 10px;
+    font-size: 52px;
+}
+#artikel_text1{
+    font-size: 20px;
 }
 #artikel2 {
     background-color: rgba(248, 157, 14, 0.7);
@@ -76,7 +83,11 @@ h1 {
 }
 #artikel_titel2 {
     position: relative;
-    top: 10px
+    top: 10px;
+    font-size: 52px;
+}
+#artikel_text2{
+    font-size: 20px;
 }
 #actueel_banner {
     width: 100%;
@@ -91,6 +102,7 @@ h1 {
     position: relative;
 }
 #act_banner {
+    margin-top: -100px;
     width: 100%;
     height: 500px;
     box-shadow: 5px 5px 10px black;
