--- a/styles/tickets.css
+++ b/styles/tickets.css
@@ -50,8 +50,9 @@ nav ul li a{
 h1 {
     color: rgba(19, 157, 142, 1);
     font-size: 100;
-    align: center;
+    align-self: center;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    margin-top: -100px;
 }
 tr, td, table {
     border:rgba(19, 157, 142, .8) 2px solid;
@@ -87,4 +88,5 @@ tr, td {
     width: 100%;
     height: 500px;
     box-shadow: 5px 5px 10px black;
+    margin-top: -100px;
 }
