--- a/styles/shop.css
+++ b/styles/shop.css
@@ -13,13 +13,6 @@ body {
     background-color: #d0e5da;
     font-family: 'Baskerville';
 }
-#bannerimage{
-    position: relative;
-    top: -110px;
-    margin: 0;
-    width: 100%;
-    z-index: 5  ;
-}
 nav{
     width: 100%;
     height: 100px;
@@ -55,8 +48,10 @@ nav ul li a{
 }
 h1 {
     color: rgba(19, 157, 142, 1);
+    margin-top: -100px;
+    z-index: 5;
     font-size: 100px;
-    align: center;
+    align-self: center;
     text-shadow: 5px 5px 10px black;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
@@ -70,6 +65,7 @@ h1 {
     width: 100%;
     height: 500px;
     box-shadow: 5px 5px 10px black;
+    margin-top: -150px;
 }
 #shop_titel {
     text-align: center;
